version: "0.0.1-dirty"
opam-version: "2.0"
name: "OcamLog"
synopsis: "Simple Logger for OCaml"
description: "Able to print with different colors, levels, trace out caller, etc."
maintainer: "paulpatault <p.patault@gmail.com>"
authors: "paulpatault <p.patault@gmail.com>"
depends: ["ocaml"]
build: ["dune" "build"]
dev-repo: "git+https://github.com/paulpatault/OcamLog"
homepage: "https://www.github.com/paulpatault/OcamLog"
bug-reports: "https://www.github.com/paulpatault/OcamLog/issues"
