version: "0.11"
opam-version: "2.0"
name: "OcamLog"
synopsis: "Simple Logger for OCaml"
description: "Able to print with different colors, levels, trace out caller, etc."
maintainer: "paulpatault <p.patault@gmail.com>"
authors: "paulpatault <p.patault@gmail.com>"
depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "2.8"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paulpatault/OcamLog"
homepage: "https://www.github.com/paulpatault/OcamLog"
bug-reports: "https://www.github.com/paulpatault/OcamLog/issues"
license: "MIT"
